[metadata]
name = jbutler
version = 1.0.0
summary = Manage a Jenkins instance
description-file = README.rst
author = Walter Scheper
author_email = walter.scheper@sas.com
license = Apache 2
home-page = https://github.com/sassoftware/jbutler
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    jbutler

[extras]
testing =
    mock:python_version<'3.4'
    pytest
    pytest-cov
    unittest2:python_version=='2.6'

[entry_points]
console_scripts =
    jbutler = jbutler.__main__:main

[coverage:paths]
source =
   jbutler
   */site-packages/jbutler

[coverage:run]
branch = true
source = jbutler
parallel = true

[coverage:report]
show_missing = true
precision = 2

[flake8]
ignore = E402
